--- a/2_reloj.html
+++ b/2_reloj.html
@@ -7,9 +7,15 @@
 </head>
 <body>
   <div id="reloj">
-    <div id="segundos" class="manecillas"></div>
-    <div id="minutos" class="manecillas"></div>
-    <div id="horas" class="manecillas"></div>
+    <div id="segundos" class="manecillas">
+        <div class="aguja"></div>
+    </div>
+    <div id="minutos" class="manecillas">
+        <div class="aguja"></div>
+    </div>
+    <div id="horas" class="manecillas">
+        <div class="aguja"></div>
+    </div>
   </div>
 </body>
 </html>
